--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-
-/*
-Template Name: Aix | AI Business & Agency Website Template
-Author: Pillarix
-Author URI: https://wrapbootstrap.com/user/pillarix
-Version: 1.0
-*/
 /*
 -- Body
 -- Custom Bootstrap
@@ -188,6 +181,7 @@ a:hover {
 }
 .app-nav .navbar-nav .nav-link.active {
 	color: #ffc109;
+	font-weight: 900;
 }
 .osahan-header-logo .logo {
 	height: 30px;
@@ -381,4 +375,10 @@ a:hover {
 		transform: none;
 	}
 }
-    
+
+h1 {
+	font-size: 40px;
+	font-weight: 700;
+	line-height: 1.2;
+	margin-bottom: 15px;
+}
